Fixed overlapping footer

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,10 +1,10 @@
 body{
     background-color: #dbdbdb;
     background-image: url("../images/textured_paper.png");
-    height:100%;    
+    height:100%;     
 }
-html{
-    height:100%;
+html{    
+    padding-bottom: 50px;
 }
 ul{
     list-style-type: none;
@@ -32,13 +32,8 @@ ul{
     overflow-y: auto;
 }
 #wrapper {
-     display: block; 
-      margin: 0 auto ;
-    /* margin-left: 2%;
-    margin-right:2%; */
-    min-height: 100%; 
-              margin-bottom: 1000px;     
-    padding-bottom: 1000px;     
-    
+    display: block; 
+    margin: 0 auto ;
+    min-height: 100%;       
 }
 
